[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entita/player/Label.gd" type="Script" id=1]
[ext_resource path="res://DUNGEON/PNG/magico.png" type="Texture" id=2]
[ext_resource path="res://DUNGEON/PNG/speed.png" type="Texture" id=3]
[ext_resource path="res://DUNGEON/PNG/play.png" type="Texture" id=4]
[ext_resource path="res://Entita/player/Controlli assets/genericButton.png" type="Texture" id=5]
[ext_resource path="res://DUNGEON/PNG/spadina.png" type="Texture" id=6]
[ext_resource path="res://Entita/player/UI/CombatUI.gd" type="Script" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.498039, 0.196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.172549, 0.168627, 0.168627, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.278431, 0.388235, 0.87451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.815686, 0.815686, 0.815686, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="CombatUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBar" type="ProgressBar" parent="."]
anchor_left = 0.041
anchor_top = 0.031
anchor_right = 0.046
anchor_bottom = 0.072
margin_right = 300.0
margin_bottom = 1.0
theme = SubResource( 1 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mpBar" type="ProgressBar" parent="."]
anchor_left = 0.059
anchor_top = 0.056
anchor_right = 0.059
anchor_bottom = 0.078
margin_right = 200.0
margin_bottom = 7.74
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="movStick" type="Sprite" parent="."]
visible = false
position = Vector2( 128.434, 410.276 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="pause" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.782
margin_top = 8.10199
margin_right = 132.218
margin_bottom = 305.102
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -120.0
margin_right = 133.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 50.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_right = 50.0
margin_bottom = 25.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back2town" type="Button" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.5
margin_top = -50.0
margin_right = 57.5
text = "Go back to town"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
rect_scale = Vector2( 4.01612, 4.629 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameButtons" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -354.944
margin_top = -304.0
margin_right = -0.94397
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attacco" type="TextureButton" parent="gameButtons"]
anchor_left = 0.684
anchor_top = 0.133
anchor_right = 0.958
anchor_bottom = 0.411
margin_left = -59.5733
margin_top = -56.7841
margin_right = 306.431
margin_bottom = 311.704
rect_scale = Vector2( 0.35, 0.35 )
texture_normal = ExtResource( 6 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scatto" type="TextureButton" parent="gameButtons"]
anchor_left = 0.379
anchor_top = 0.557
anchor_right = 0.653
anchor_bottom = 0.889
margin_left = -40.5111
margin_top = -49.992
margin_right = 155.493
margin_bottom = 142.08
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0.5, 0 )
texture_normal = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="special" type="TextureButton" parent="gameButtons"]
anchor_right = 0.086
anchor_bottom = 0.146
margin_left = -3.05151
margin_top = -16.0437
margin_right = 323.504
margin_bottom = 252.572
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spatk1" type="TextureButton" parent="gameButtons/special"]
anchor_right = 0.086
anchor_bottom = 0.146
margin_left = -130.202
margin_top = 21.8005
margin_right = 129.298
margin_bottom = 235.3
rect_scale = Vector2( 0.7, 0.8 )
texture_normal = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spatk2" type="TextureButton" parent="gameButtons/special"]
anchor_right = 0.086
anchor_bottom = 0.146
margin_left = 21.5986
margin_top = -71.9956
margin_right = 250.099
margin_bottom = 141.504
rect_scale = Vector2( 0.8, 0.5 )
texture_normal = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spatk3" type="TextureButton" parent="gameButtons/special"]
anchor_right = 0.086
anchor_bottom = 0.146
margin_left = 205.187
margin_top = 21.5985
margin_right = 433.687
margin_bottom = 235.099
rect_scale = Vector2( 0.5, 0.8 )
texture_normal = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spatk4" type="TextureButton" parent="gameButtons/special"]
anchor_right = 0.086
anchor_bottom = 0.146
margin_left = 28.7983
margin_top = 194.388
margin_right = 257.298
margin_bottom = 407.888
rect_scale = Vector2( 0.8, 0.5 )
texture_normal = ExtResource( 5 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="pause" to="." method="_on_pause_button_down"]
[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="button_down" from="gameButtons/attacco" to="." method="_on_attacco_button_down"]
[connection signal="button_down" from="gameButtons/scatto" to="." method="_on_scatto_button_down"]
[connection signal="gui_input" from="gameButtons/special" to="." method="_on_special_gui_input"]
